# df_sampling

./: .cruft.json  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml  sub_package_update.yml
.tmp/py10-test-oldestdeps/: requirements-min.txt
df_sampling/: __init__.py  coord_transforms.py  df_sampler.py  dosampling.py  hernquist_model.py  make_obs.py  misc_fcns.py  powerlaw_model.py
df_sampling/tests/: test_sampling.py
df_sampling/utils/: __init__.py  coord_transforms.py  make_obs.py  misc_fcns.py
docs/: conf.py  index.rst  installation.rst  modules.rst  requirements.txt  usage.rst
licenses/: LICENSE.rst
